exposing port and configuring workdir